--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 <body>
   <!-- note that the form below is hidden, but necessary for auto-form handling with Netlify -->
   <form name="contact" subject='A Message From Personal Website' netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
+    <input type="text" name="firstName" />
+    <input type="text" name="lastName" />
     <input type="email" name="email" />
-    <input type="text" name="art" />
     <textarea name="message"></textarea>
   </form>
   <app-root>Loading...</app-root>
